# lyonesse

./: CMakeLists.txt  base.hpp  input.cpp  input.hpp  main.cpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  renderer_2D.cpp  renderer_2D.hpp  resource_manager.cpp  resource_manager.hpp  shader.cpp  shader.hpp  texture.hpp  window.cpp  window.hpp
assets/shaders/: basic.frag  basic.vert  instance.frag  instance.vert
ecs/: components.hpp  ecs.hpp  entities.hpp  scene.cpp  scene.hpp  systems.hpp
fileio/: load_mesh.cpp  load_mesh.hpp
scripts/: config.lua  quad.lua
util/: random.hpp
